// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Node polyfills > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

const node_events = require('node:events');
const path = require('node:path');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const path__default = /*#__PURE__*/_interopDefault(path);
const test = path__default.default.join('foo', 'bar');
const emitter = new node_events.EventEmitter();
class Example extends node_events.EventEmitter {
  log() {}
}
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { Example, emitter, test } = data;"
`;

exports[`Node polyfills > babel > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

const node_events = require('node:events');
const path = require('node:path');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const path__default = /*#__PURE__*/_interopDefault(path);
const test = path__default.default.join('foo', 'bar');
const emitter = new node_events.EventEmitter();
class Example extends node_events.EventEmitter {
  log() {}
}
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

import { EventEmitter } from 'node:events';
import path from 'node:path';
const test = path.join('foo', 'bar');
const emitter = new EventEmitter();
class Example extends EventEmitter {
  log() {}
}
export { Example, emitter, test };
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

const node_events = require('node:events');
const path = require('node:path');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const path__default = /*#__PURE__*/_interopDefault(path);
const test = path__default.default.join('foo', 'bar');
const emitter = new node_events.EventEmitter();
class Example extends node_events.EventEmitter {
  log() {}
}
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { Example, emitter, test } = data;"
`;

exports[`Node polyfills > babel > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

const node_events = require('node:events');
const path = require('node:path');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const path__default = /*#__PURE__*/_interopDefault(path);
const test = path__default.default.join('foo', 'bar');
const emitter = new node_events.EventEmitter();
class Example extends node_events.EventEmitter {
  log() {}
}
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

import { EventEmitter } from 'node:events';
import path from 'node:path';
const test = path.join('foo', 'bar');
const emitter = new EventEmitter();
class Example extends EventEmitter {
  log() {}
}
export { Example, emitter, test };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

const events = require('events');
const path = require('path');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const path__default = /*#__PURE__*/_interopDefault(path);
const test = path__default.default.join('foo', 'bar');
const emitter = new events.EventEmitter();
class Example extends events.EventEmitter {
  log() {}
}
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { Example, emitter, test } = data;"
`;

exports[`Node polyfills > babel > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

const events = require('events');
const path = require('path');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const path__default = /*#__PURE__*/_interopDefault(path);
const test = path__default.default.join('foo', 'bar');
const emitter = new events.EventEmitter();
class Example extends events.EventEmitter {
  log() {}
}
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

import { EventEmitter } from 'events';
import path from 'path';
const test = path.join('foo', 'bar');
const emitter = new EventEmitter();
class Example extends EventEmitter {
  log() {}
}
export { Example, emitter, test };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

const node_events = require('node:events');
const path = require('node:path');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const path__default = /*#__PURE__*/_interopDefault(path);
const test = path__default.default.join('foo', 'bar');
const emitter = new node_events.EventEmitter();
class Example extends node_events.EventEmitter {
  log() {}
}
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { Example, emitter, test } = data;"
`;

exports[`Node polyfills > babel > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

const node_events = require('node:events');
const path = require('node:path');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const path__default = /*#__PURE__*/_interopDefault(path);
const test = path__default.default.join('foo', 'bar');
const emitter = new node_events.EventEmitter();
class Example extends node_events.EventEmitter {
  log() {}
}
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`Node polyfills > babel > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import { EventEmitter } from 'node:events';
import path from 'node:path';
const test = path.join('foo', 'bar');
const emitter = new EventEmitter();
class Example extends EventEmitter {
  log() {}
}
export { Example, emitter, test };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
"use strict";
const node_events = require("node:events");
const path = require("node:path");
const _interopDefault = (e)=>e && e.__esModule ? e : {
        default: e
    };
const path__default = /*#__PURE__*/ _interopDefault(path);
const test = path__default.default.join("foo", "bar");
const emitter = new node_events.EventEmitter();
let Example = class Example extends node_events.EventEmitter {
    log() {}
};
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-current-cjs.cjs';

export const { Example, emitter, test } = data;"
`;

exports[`Node polyfills > swc > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
"use strict";
const node_events = require("node:events");
const path = require("node:path");
const _interopDefault = (e)=>e && e.__esModule ? e : {
        default: e
    };
const path__default = /*#__PURE__*/ _interopDefault(path);
const test = path__default.default.join("foo", "bar");
const emitter = new node_events.EventEmitter();
let Example = class Example extends node_events.EventEmitter {
    log() {}
};
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
import { EventEmitter } from "node:events";
import path from "node:path";
const test = path.join("foo", "bar");
const emitter = new EventEmitter();
let Example = class Example extends EventEmitter {
    log() {}
};
export { Example, emitter, test };
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
"use strict";
const node_events = require("node:events");
const path = require("node:path");
const _interopDefault = (e)=>e && e.__esModule ? e : {
        default: e
    };
const path__default = /*#__PURE__*/ _interopDefault(path);
const test = path__default.default.join("foo", "bar");
const emitter = new node_events.EventEmitter();
let Example = class Example extends node_events.EventEmitter {
    log() {}
};
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-experimental-cjs.cjs';

export const { Example, emitter, test } = data;"
`;

exports[`Node polyfills > swc > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
"use strict";
const node_events = require("node:events");
const path = require("node:path");
const _interopDefault = (e)=>e && e.__esModule ? e : {
        default: e
    };
const path__default = /*#__PURE__*/ _interopDefault(path);
const test = path__default.default.join("foo", "bar");
const emitter = new node_events.EventEmitter();
let Example = class Example extends node_events.EventEmitter {
    log() {}
};
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
import { EventEmitter } from "node:events";
import path from "node:path";
const test = path.join("foo", "bar");
const emitter = new EventEmitter();
let Example = class Example extends EventEmitter {
    log() {}
};
export { Example, emitter, test };
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
const events = require("events");
const path = require("path");
const _interopDefault = (e)=>e && e.__esModule ? e : {
        default: e
    };
const path__default = /*#__PURE__*/ _interopDefault(path);
const test = path__default.default.join("foo", "bar");
const emitter = new events.EventEmitter();
let Example = class Example extends events.EventEmitter {
    log() {}
};
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-legacy-cjs.cjs';

export const { Example, emitter, test } = data;"
`;

exports[`Node polyfills > swc > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
const events = require("events");
const path = require("path");
const _interopDefault = (e)=>e && e.__esModule ? e : {
        default: e
    };
const path__default = /*#__PURE__*/ _interopDefault(path);
const test = path__default.default.join("foo", "bar");
const emitter = new events.EventEmitter();
let Example = class Example extends events.EventEmitter {
    log() {}
};
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
import { EventEmitter } from "events";
import path from "path";
const test = path.join("foo", "bar");
const emitter = new EventEmitter();
let Example = class Example extends EventEmitter {
    log() {}
};
export { Example, emitter, test };
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
"use strict";
const node_events = require("node:events");
const path = require("node:path");
const _interopDefault = (e)=>e && e.__esModule ? e : {
        default: e
    };
const path__default = /*#__PURE__*/ _interopDefault(path);
const test = path__default.default.join("foo", "bar");
const emitter = new node_events.EventEmitter();
let Example = class Example extends node_events.EventEmitter {
    log() {}
};
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import data from './index-node-stable-cjs.cjs';

export const { Example, emitter, test } = data;"
`;

exports[`Node polyfills > swc > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
"use strict";
const node_events = require("node:events");
const path = require("node:path");
const _interopDefault = (e)=>e && e.__esModule ? e : {
        default: e
    };
const path__default = /*#__PURE__*/ _interopDefault(path);
const test = path__default.default.join("foo", "bar");
const emitter = new node_events.EventEmitter();
let Example = class Example extends node_events.EventEmitter {
    log() {}
};
exports.Example = Example;
exports.emitter = emitter;
exports.test = test;
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`Node polyfills > swc > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
import { EventEmitter } from "node:events";
import path from "node:path";
const test = path.join("foo", "bar");
const emitter = new EventEmitter();
let Example = class Example extends EventEmitter {
    log() {}
};
export { Example, emitter, test };
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;
